tests/bad_programs/type_errors/var_not_in_scope_after_funcall.notc
int main() {
    int x = 10;
    return fun();
}

int fun() {
    return x;
}
